--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#index.html">About</a></li>
+                <li><a href="dish.html">Recipes</a></li>
             </ul>
         </nav>
     </header>
