--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#index.html">About</a></li>
-                <li><a href="dish.html">Recipes</a></li>
+                <li><a href="/html/dish.html">Recipes</a></li>
             </ul>
         </nav>
     </header>
@@ -28,7 +28,7 @@
             <div class="text">
                 <h1>Welcome to Tasty ! delicious food recipes waiting for you</h1>
                 <p>Your go-to place for delicious food recipes.</p>
-                <a href="dish.html" class="ready-cook-btn">Ready to Cook</a>
+                <a href="/html/dish.html" class="ready-cook-btn">Ready to Cook</a>
             </div>
             <div class="dish"><img src="/img/dish-3.png" alt="Delicious Dish"></div>
 
